fixed final state message and out of space check